--- a/application/modules/backend/views/scripts/categories/index.phtml
+++ b/application/modules/backend/views/scripts/categories/index.phtml
@@ -332,7 +332,7 @@
 //                    $(".alert-success").alert().fadeIn('slow');
                     $('#text-cat-about').val(data.CatAbout);
                     $('#text-cat-id').val(data.c);
-                    $('#dialog-cat-about').dialog('open')
+                    $('#dialog-cat-about').dialog('open');
                     return false;
                 },
                 complete: function (data, textStatus, errorThrown) {
