--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1365,13 +1365,17 @@ ul.meta-nav-top
           padding-left: 5px;
           padding-right: 5px;
         }
-        .explore-product-image {
+        .imageContainer{
+           height:167px; 
+           display:flex;
+           justify-content: center;
+           align-items: center;          
+        }
+         .explore-product-image {
             max-width: 95%;
             max-height: 167px;
-        }
-        img{
-          max-width: 100%;
-        }
+          }
+      
         .contentLeft
         {
           float: left; 
@@ -1746,6 +1750,60 @@ ul.meta-nav-top
           display: block; 
           font-weight: normal;
         }
+        .topics{
+              padding-right: 20px;
+              float: right;
+
+            .topic-tag
+            {
+                display: inline-block;
+                padding: 0.3em 0.9em;
+                margin: 0 0.5em 0.5em 0;
+                white-space: nowrap;
+                background-color: #f1f8ff;
+                border-radius: 3px;
+            }
+            .topic-tag-link
+            {
+                &:hover {
+                      text-decoration: none;
+                      background-color: #def;
+                  }
+
+            } 
+            .btn-link{
+                display: inline-block;
+                padding: 0;
+                font-size: inherit;
+                color: #0366d6;
+                text-decoration: none;
+                white-space: nowrap;
+                cursor: pointer;
+                -webkit-user-select: none;
+                -moz-user-select: none;
+                -ms-user-select: none;
+                user-select: none;
+                background-color: transparent;
+                border: 0;
+                -webkit-appearance: none;
+                -moz-appearance: none;
+                appearance: none;
+                float: right;
+                padding-top: 5px;
+                padding-left: 10px;
+            }
+            .topic-tags-saved{
+                display: none; 
+                color: #0366d6;
+                float: left;                
+                padding-top: 5px;
+                padding-left: 10px;
+                .fa-check{
+                  color: green;
+                }
+            }
+        }
+        
         span.source{
             color:#4e4e4e;
         }
@@ -5513,6 +5571,7 @@ span.page-views {
     border-bottom:1px solid #ccd4d8 ;
     padding-top: 5px;
     padding-bottom: 5px;
+    overflow: hidden;
     p{
       margin: 0;
     }
@@ -5639,6 +5698,46 @@ img.imgpopover
        color:#37628D;
        padding-top: 10px;       
        padding-bottom: 10px;     
+    }
+
+    .topics{
+          padding-right: 20px;
+        
+        .topic-tag
+        {
+            display: inline-block;
+            padding: 0.3em 0.9em;
+            margin: 0 0.5em 0.5em 0;
+            white-space: nowrap;
+            background-color: #f1f8ff;
+            border-radius: 3px;
+        }
+        .topic-tag-link
+        {
+            &:hover {
+                  text-decoration: none;
+                  background-color: #def;
+              }
+
+        } 
+        .btn-link{
+            display: inline-block;
+            padding: 0;
+            font-size: inherit;
+            color: #0366d6;
+            text-decoration: none;
+            white-space: nowrap;
+            cursor: pointer;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+            background-color: transparent;
+            border: 0;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+        }
     }
 
     .my-downloadshistory-list{
