--- a/application/modules/default/views/scripts/authorization/login.phtml
+++ b/application/modules/default/views/scripts/authorization/login.phtml
@@ -53,8 +53,15 @@ $url_param_redirect = isset($this->redirect) ? 'redirect/'.$this->redirect : nul
                       with Github
                     </a>
                   </div>
-
+<?php /*
                   <div class="bottom margin-top-15">
+                    <a  href="/login/ocs/<?=$url_param_redirect?>" class="btn btn-block btn-social btn-github">
+                        <span class="glyphicon glyphicon-log-in"></span>
+                        with Opendesktop ID
+                    </a>
+                  </div>
+*/ ?>
+                    <div class="bottom margin-top-15">
                     <div id="show-login-description" class="small light lightgrey">Join us?</div>
                     <div class="login2">
                       <a href="/register/" id="show-login-form" class="btn btn-native btn-min-width">
