--- a/application/modules/default/views/scripts/product/add.phtml
+++ b/application/modules/default/views/scripts/product/add.phtml
@@ -229,7 +229,7 @@ $this->inlineScript()->appendScript('
                                 <?= $this->form->gallery ?>
                                 <?= $this->form->embed_code ?>
                                 <?= $this->form->link_1 ?>
-                                <?= $this->form->github_code ?>
+                                <?= $this->form->source_url ?>
                                 <?= $this->form->facebook_code ?>
                                 <?= $this->form->twitter_code ?>
                                 <?= $this->form->google_code ?>
