--- a/application/modules/default/views/scripts/user/partials/loopMyProducts.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopMyProducts.phtml
@@ -85,7 +85,7 @@ $helperImage = new Default_View_Helper_Image();
         {                  
             foreach (explode(',',$tagsuser) as $tag) { 
         ?>
-        <a href="/search?projectSearchText=<?=$tag?>&f=tags" class="topic-tag topic-tag-link usertagslabel"><?=$tag?></a>
+        <a rel="nofollow" href="/search?projectSearchText=<?=$tag?>&t=<?=$tag?>&f=tags" class="topic-tag topic-tag-link usertagslabel"><?=$tag?></a>
          <?php 
             }                                       
          }
