--- a/application/modules/default/views/scripts/product/partials/searchFilter.phtml
+++ b/application/modules/default/views/scripts/product/partials/searchFilter.phtml
@@ -14,6 +14,7 @@
         $currentTag = $this->t;
         $urlCatPart = $this->pci ? array('pci'=>$this->pci) : array();
         $urlScorePart = $this->ls ? array('ls'=>$this->ls) : array();
+        $hasTagField = isset($this->searchField) AND $this->searchField == 'tags' ? true : false;
 
         ?>
     <style>
@@ -62,17 +63,17 @@
         <h4 style="font-weight: 600;padding:10px 15px;">Choose Filter:</h4>
         <div class="current-search">
         <?php if ($currentCat) : ?>
-        <a href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>$this->page, 'pci' => null))?>" class="btn btn-default btn-xs" role="button">
+        <a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>$this->page, 'pci' => null))?>" class="btn btn-default btn-xs" role="button">
             <span class="glyphicon glyphicon-remove text-danger" aria-hidden="true" style="margin-right: 2px;top:2px;"></span><?= $mapCategories[intval($currentCat)]?> </span>
         </a>
         <?php endif; ?>
         <?php if ($currentTag) : ?>
-            <a href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>$this->page, 't' => null))?>" class="btn btn-default btn-xs" role="button">
+            <a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>$this->page, 't' => null))?>" class="btn btn-default btn-xs" role="button">
                 <span class="glyphicon glyphicon-remove text-danger" aria-hidden="true" style="margin-right: 2px;top:2px;"></span><?= $currentTag?>
             </a>
         <?php endif; ?>
         <?php if ($currentScore) : ?>
-            <a href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>$this->page, 'ls' => null))?>" class="btn btn-default btn-xs" role="button">
+            <a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>$this->page, 'ls' => null))?>" class="btn btn-default btn-xs" role="button">
                 <span class="glyphicon glyphicon-remove text-danger" aria-hidden="true" style="margin-right: 2px;top:2px;"></span><?= $currentScore?>
             </a>
         <?php endif; ?>
@@ -89,38 +90,54 @@
             <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown"><?=$mapFields[$field_name]?> <span class="caret"></span></button>
             <ul class="dropdown-menu">
             <?php
-                if ('Category' == $mapFields[$field_name]) : ?>
-                    <?php foreach ($facet_field as $key =>$count) { ?>
-                        <?php if ($key == $currentCat) : ?>
-                        <li><a href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>$this->page, 'pci' => null))?>" class="active">
-                            <span class="glyphicon glyphicon-remove text-danger" aria-hidden="true" style="margin-right: 2px;top:2px;"></span><?= $mapCategories[intval($key)]?> <span class="badge"><?=$count?></span>
-                        </a></li>
-                        <?php else : ?>
-                        <li><a href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>$this->page, 'pci'=>$key))?>">
-                            <?= $mapCategories[intval($key)]?> <span class="badge"><?=$count?></span></a>
-                        </li>
+                switch ($mapFields[$field_name]) {
+                    case 'Category' : ?>
+                        <?php foreach ($facet_field as $key =>$count) { ?>
+                            <?php if ($key == $currentCat) : ?>
+                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>$this->page, 'pci' => null))?>" class="active">
+                                        <span class="glyphicon glyphicon-remove text-danger" aria-hidden="true" style="margin-right: 2px;top:2px;"></span><?= $mapCategories[intval($key)]?> <span class="badge"><?=$count?></span>
+                                    </a></li>
+                            <?php else : ?>
+                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>$this->page, 'pci'=>$key))?>">
+                                   <?= $mapCategories[intval($key)]?> <span class="badge"><?=$count?></span></a>
+                                </li>
+                            <?php endif; ?>
+                            <?php } ?>
+                    <?php break;
+                    case 'Tags' : ?>
+                        <?php if (count((array)$facet_field) == 0) :?>
+                            <li><span class="no-tags-msg"> no tags found </span></li>
                         <?php endif; ?>
-                    <?php
-                     }
-                     ?>
-                <?php else : ?>
-                    <?php if (count((array)$facet_field) == 0) :?>
-                    <li><span class="no-tags-msg"> no tags found </span></li>
-                    <?php endif; ?>
-                    <?php foreach ($facet_field as $key =>$count) { ?>
-                        <?php if ($key == $mapCurrentParam[$field_name]) : ?>
-                            <li><a href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>$this->page, $mapUrlIdent[$field_name] => null))?>" class="active">
-                                <span class="glyphicon glyphicon-remove text-danger" aria-hidden="true" style="margin-right: 2px;top:2px;"></span><?= $key?> <span class="badge"><?=$count?></span>
-                                </a></li>
-                        <?php else : ?>
-                            <li><a href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>$this->page, $mapUrlIdent[$field_name] => $key))?>" >
-                                <?= $key?> <span class="badge"><?=$count?></span>
-                                </a></li>
+                        <?php $searchTextForTags = $hasTagField ? $currentTag : $this->searchText;
+                            foreach ($facet_field as $key =>$count) { ?>
+                            <?php if ($key == $mapCurrentParam[$field_name]) : ?>
+                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$searchTextForTags, 'page'=>$this->page, $mapUrlIdent[$field_name] => null))?>" class="active">
+                                        <span class="glyphicon glyphicon-remove text-danger" aria-hidden="true" style="margin-right: 2px;top:2px;"></span><?= $key?> <span class="badge"><?=$count?></span>
+                                    </a></li>
+                            <?php else : ?>
+                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$searchTextForTags, 'page'=>$this->page, $mapUrlIdent[$field_name] => $key))?>" >
+                                        <?= $key?> <span class="badge"><?=$count?></span>
+                                    </a></li>
+                            <?php endif; ?>
+                            <?php } ?>
+                        <?php break;
+                    case 'Score' : ?>
+                        <?php if (count((array)$facet_field) == 0) :?>
+                            <li><span class="no-tags-msg"> no tags found </span></li>
                         <?php endif; ?>
-                        <?php
-                    }
-                    ?>
-                <?php endif; ?>
+                        <?php foreach ($facet_field as $key =>$count) { ?>
+                            <?php if ($key == $mapCurrentParam[$field_name]) : ?>
+                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>$this->page, $mapUrlIdent[$field_name] => null))?>" class="active">
+                                        <span class="glyphicon glyphicon-remove text-danger" aria-hidden="true" style="margin-right: 2px;top:2px;"></span><?= $key?> <span class="badge"><?=$count?></span>
+                                    </a></li>
+                            <?php else : ?>
+                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>$this->page, $mapUrlIdent[$field_name] => $key))?>" >
+                                        <?= $key?> <span class="badge"><?=$count?></span>
+                                    </a></li>
+                            <?php endif; ?>
+                            <?php } ?>
+                        <?php break;
+                        } ?>
             </ul>
          </div>
         </div>
@@ -135,11 +152,11 @@
         <ul class="dropdown-menu">
         <?php foreach ($facet_field->counts as $key =>$count) { ?>
                 <?php if ($key == $mapCurrentParam[$field_name]) : ?>
-                <li><a href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>$this->page, 'ls' => null))?>" class="active">
+                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>$this->page, 'ls' => null))?>" class="active">
                     <span class="glyphicon glyphicon-remove text-danger pull-left" aria-hidden="true" style="margin-right: 2px;top:3px;color:white;"></span><?=intval($key)?><span class="badge"><?=$count?></span>
                 </a></li>
                 <?php else :?>
-                <li><a href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>$this->page, 'ls' =>intval($key)))?>" >
+                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>$this->page, 'ls' =>intval($key)))?>" >
                     <?=intval($key)?><span class="badge"><?=$count?></span>
                 </a></li>
                 <?php endif; ?>
