--- a/application/modules/default/views/scripts/product/viewscripts/input_tags_user.phtml
+++ b/application/modules/default/views/scripts/product/viewscripts/input_tags_user.phtml
@@ -30,7 +30,7 @@ $this->inlineScript()->appendFile('/theme/flatui/js/lib/select2.min.js');
         <?php if ($this->element->isRequired()) { ?>
             <div class="small grey bold-font pull-left margin-right-5">*</div>
         <?php } ?>
-        <label class="form-label" for="<?= $this->escape($this->element->getName()) ?>">Topics</label>
+        <label class="form-label" for="<?= $this->escape($this->element->getName()) ?>">Tags</label>
     </div>
     <div class="col-sm-12">
         <select
