tags show id fix

--- a/application/modules/backend/views/scripts/tags/index.phtml
+++ b/application/modules/backend/views/scripts/tags/index.phtml
@@ -86,7 +86,9 @@
                                             defaultValue: jTableData.record.group_id
                                         },
                                         tag_id: {
-                                            type: 'hidden',
+                                             title: 'Tag ID',
+                                             edit: false,
+                                             create:false
                                         },
                                         tag_name: {
                                             title: 'Tag Name',
