--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -215,12 +215,23 @@ $this->likes = $tableProjectFollower->fetchLikesForProject($this->product->proje
                                     echo '<span class="topics">';
                                     $tagmodel = new Default_Model_Tags();
                                     $tagsuser = $tagmodel->getTagsUser($this->product->project_id, Default_Model_Tags::TAG_TYPE_PROJECT);  
-
+                                    $tagscat = $tagmodel->getTagsCategory($this->product->project_id, Default_Model_Tags::TAG_TYPE_PROJECT);  
                                     echo '<span class="topicslink">';
+
+
                                     if(false === empty($tagsuser))
-                                    {
-                                       
+                                    {                                       
                                         foreach (explode(',',$tagsuser) as $tag) { 
+                                    ?>
+                                    <a rel="nofollow" href="/search/projectSearchText/<?=$tag?>/t/<?=$tag?>/f/tags" class="topic-tag topic-tag-link usertagslabel"><?=$tag?></a>
+                                     <?php 
+                                        }                                       
+                                     }
+
+                                    if(false === empty($tagscat))
+                                    {                                
+                                        $tagscat = array_diff(explode(',', $tagscat), explode(',', $tagsuser));
+                                        foreach ($tagscat as $tag) { 
                                     ?>
                                     <a rel="nofollow" href="/search/projectSearchText/<?=$tag?>/t/<?=$tag?>/f/tags" class="topic-tag topic-tag-link usertagslabel"><?=$tag?></a>
                                      <?php 
