--- a/application/modules/default/views/scripts/product/add.phtml
+++ b/application/modules/default/views/scripts/product/add.phtml
@@ -234,21 +234,24 @@ $this->inlineScript()->appendScript('
                                  <?php 
                                     if($this->project_id)
                                     {
+                                                $tagmodel = new Default_Model_Tags();            
+                                                $tagscat = $tagmodel->getTagsCategory($this->project_id, Default_Model_Tags::TAG_TYPE_PROJECT);  
+                                                if(strlen($tagscat)>0)
+                                                {
                                         ?>
                                     <div class="form-group">
                                         <div class="col-sm-12 margin-top-15">
-                                            <label class="form-label"> Category Tags</label>    
+                                            <label class="form-label"> Category Default Tags</label>    
                                         </div>
                                         <div class="col-sm-12">
                                           <?php 
-                                                $tagmodel = new Default_Model_Tags();            
-                                                $tagscat = $tagmodel->getTagsCategory($this->project_id, Default_Model_Tags::TAG_TYPE_PROJECT);  
+                                                
                                                 echo $tagscat ;
                                           ?>
                                         </div>
                                     </div>
                                     <?php
-                                    }
+                                    }}
                                     ?>
 
                                 <?= $this->form->tagsuser ?>
