--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1763,13 +1763,15 @@ ul.meta-nav-top
                 background-color: #f1f8ff;
                 border-radius: 3px;
             }
+            .usertagslabelcat{
+                    background-color: #ccc;
+                }
             .topic-tag-link
             {
                 &:hover {
                       text-decoration: none;
                       background-color: #def;
-                  }
-
+                  }                
             } 
             .btn-link{
                 display: inline-block;
