--- a/application/modules/default/views/scripts/product/add.phtml
+++ b/application/modules/default/views/scripts/product/add.phtml
@@ -241,7 +241,7 @@ $this->inlineScript()->appendScript('
                                         ?>
                                     <div class="form-group">
                                         <div class="col-sm-12 margin-top-15">
-                                            <label class="form-label"> Category Default Tags</label>    
+                                            <label class="form-label"> System Auto Tags</label>    
                                         </div>
                                         <div class="col-sm-12">
                                           <?php 
