--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1764,7 +1764,7 @@ ul.meta-nav-top
                 border-radius: 3px;
             }
             .usertagslabelcat{
-                    background-color: #ccc;
+                    background-color: #bdeeff;
                 }
             .topic-tag-link
             {
@@ -5714,6 +5714,9 @@ img.imgpopover
             background-color: #f1f8ff;
             border-radius: 3px;
         }
+        .usertagslabelcat{
+                background-color: #bdeeff;
+            }
         .topic-tag-link
         {
             &:hover {
