--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1764,7 +1764,7 @@ ul.meta-nav-top
                 border-radius: 3px;
             }
             .usertagslabelcat{
-                    background-color: #bdeeff;
+                    background-color: #ddeeff;
                 }
             .topic-tag-link
             {
@@ -5715,7 +5715,7 @@ img.imgpopover
             border-radius: 3px;
         }
         .usertagslabelcat{
-                background-color: #bdeeff;
+                background-color: #ddeeff;
             }
         .topic-tag-link
         {
