--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -215,17 +215,36 @@ $this->likes = $tableProjectFollower->fetchLikesForProject($this->product->proje
                                     echo '<span class="topics">';
                                     $tagmodel = new Default_Model_Tags();
                                     $tagsuser = $tagmodel->getTagsUser($this->product->project_id, Default_Model_Tags::TAG_TYPE_PROJECT);  
-
+                                    $tagscat = $tagmodel->getTagsCategory($this->product->project_id, Default_Model_Tags::TAG_TYPE_PROJECT);  
+                                    if($tagscat && $tagsuser){
+                                        $tagscat = array_diff(explode(',', $tagscat), explode(',', $tagsuser));
+                                    }else{
+                                        if($tagscat){
+                                            $tagscat=explode(',',$tagscat);
+                                        }
+                                    }                                    
                                     echo '<span class="topicslink">';
+
+                                    if(false === empty($tagscat) && is_array($tagscat))
+                                    {            
+
+                                        foreach ($tagscat as $tag) { 
+                                    ?>
+                                    <a rel="nofollow" href="/search/projectSearchText/<?=$tag?>/t/<?=$tag?>/f/tags" class="topic-tag topic-tag-link usertagslabelcat"><?=$tag?></a>
+                                     <?php 
+                                        }                                       
+                                     } 
+
                                     if(false === empty($tagsuser))
-                                    {
-                                       
+                                    {                                       
                                         foreach (explode(',',$tagsuser) as $tag) { 
                                     ?>
                                     <a rel="nofollow" href="/search/projectSearchText/<?=$tag?>/t/<?=$tag?>/f/tags" class="topic-tag topic-tag-link usertagslabel"><?=$tag?></a>
                                      <?php 
                                         }                                       
                                      }
+
+                                   
                                      echo '</span><!--end of topicslink-->';
                                      if(Zend_Auth::getInstance()->hasIdentity() && $identity->member_id==$this->product->member_id){
                                             $this->headLink()->appendStylesheet('/theme/flatui/css/select2.min.css');
