--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -214,27 +214,8 @@ $this->likes = $tableProjectFollower->fetchLikesForProject($this->product->proje
                                     <?php
                                     echo '<span class="topics">';
                                     $tagmodel = new Default_Model_Tags();
-                                    $tagsuser = $tagmodel->getTagsUser($this->product->project_id, Default_Model_Tags::TAG_TYPE_PROJECT);  
-                                    $tagscat = $tagmodel->getTagsCategory($this->product->project_id, Default_Model_Tags::TAG_TYPE_PROJECT);  
-                                    if($tagscat && $tagsuser){
-                                        $tagscat = array_diff(explode(',', $tagscat), explode(',', $tagsuser));
-                                    }else{
-                                        if($tagscat){
-                                            $tagscat=explode(',',$tagscat);
-                                        }
-                                    }                                    
+                                    $tagsuser = $tagmodel->getTagsUser($this->product->project_id, Default_Model_Tags::TAG_TYPE_PROJECT);                                                             
                                     echo '<span class="topicslink">';
-
-                                    if(false === empty($tagscat) && is_array($tagscat))
-                                    {            
-
-                                        foreach ($tagscat as $tag) { 
-                                    ?>
-                                    <a rel="nofollow" href="/search/projectSearchText/<?=$tag?>/t/<?=$tag?>/f/tags" class="topic-tag topic-tag-link usertagslabelcat"><?=$tag?></a>
-                                     <?php 
-                                        }                                       
-                                     } 
-
                                     if(false === empty($tagsuser))
                                     {                                       
                                         foreach (explode(',',$tagsuser) as $tag) { 
@@ -242,9 +223,7 @@ $this->likes = $tableProjectFollower->fetchLikesForProject($this->product->proje
                                     <a rel="nofollow" href="/search/projectSearchText/<?=$tag?>/t/<?=$tag?>/f/tags" class="topic-tag topic-tag-link usertagslabel"><?=$tag?></a>
                                      <?php 
                                         }                                       
-                                     }
-
-                                   
+                                     }                                   
                                      echo '</span><!--end of topicslink-->';
                                      if(Zend_Auth::getInstance()->hasIdentity() && $identity->member_id==$this->product->member_id){
                                             $this->headLink()->appendStylesheet('/theme/flatui/css/select2.min.css');
@@ -673,7 +652,7 @@ $this->likes = $tableProjectFollower->fetchLikesForProject($this->product->proje
 
                         <?php echo $this->render('product/partials/details.phtml'); ?>
 
-                      
+                      <?php echo $this->render('product/partials/tags.phtml'); ?>
 
 
 
